src/less/ebook/overrides.less
body .page {
  .section {
    em {
      color: #787878;
    }
    a {
      color: @link-color;
    }
    table {
      border: none;
      td, th {
        border-left: none;
        border-right: none;
        padding: 10px;
      }
      td {
        border-top: 1px solid #e5e5e5;
        border-bottom: 1px solid #e5e5e5;
      }
      th {
        border-top: none;
        border-bottom: 2px solid #F75661;
        background: none;
      }
      tr {
        border: none;
        &:nth-child(2n) {
          background-color: #fafafa;
        }
        &:last-child td {
          border-bottom: none;
        }
      }
    }
    h1 {
      &:first-child {
        background: url(../images/couchbase-logo.png) no-repeat 0 .10em;
        background-size: 1em;
        padding-left: 1.25em;
        padding-bottom: .35em;
      }
    }
    &.toc {
      font-family: Gotham, Arial;
      font-weight: 600;
      font-size: 16px;
      a {
        padding: 15px;
      }
      li {
        margin-bottom: 10px;
      }
    }
    &.toc h1:first-child {
      display: none;
    }
  }
}

html {
  .markdown-section, .page .section, .section {
    line-height: 1.2em;
    p {
      line-height: 1.3em;
    }
    p > code {
      font-size: .9em;
      padding: 0 0 1px;
    }
    code, pre {
      font-family: "Liberation Mono",Consolas,Menlo,Courier,monospace;
      background-color: #f6f6f6;
      border: 1px solid #e5e5e5;
    }
    pre {
      line-height: 1.3em;
      font-size: 1em;
    }
    ul li {
      line-height: 1.4em;
    }
    h1, h2, h3, h4, h5, h6 {
      font-family: Gotham, Arial;
    }
    h4, h5, h6 {
      font-weight: 500;
    }
    h2 {
      font-size: 1.7em;
    }
    h3 {
      font-size: 1.3em;
      line-height: 1.2em;
    }
    h4 {
      font-size: 1.2em;
    }
    h5, h6 {
      font-size: 1em;
    }
  }
}
.page .section pre > code {
  font-size: 1em;
  white-space: pre-wrap;
}

